--- a/views/vehicle-ads-all.hbs
+++ b/views/vehicle-ads-all.hbs
@@ -30,6 +30,7 @@
         <!--/.navbar-collapse -->
     </div>
 </div>
+<form action="/vehicle_ads/search" method="get">
 <div class="container">
     <div class="row">
         <div class="col-md-3">
@@ -38,7 +39,7 @@
                     <ul class="nav "><!-- start of search fiels-->
                         <div class="form-group">
     <label for="exampleSelect1">District</label>
-    <select class="form-control" id="slct1" name="district" onchange="populate(this.id,'slct2')"required>
+    <select class="form-control" id="slct1" name="district" onchange="populate(this.id,'slct2')">
         <option>Your District</option>{{!--user district should retrieve --}}
         <option value="Ampara">Ampara</option>
         <option value="Anuradhapura">Anuradhapura</option>
@@ -70,14 +71,14 @@
 
   <div class="form-group">
     <label for="exampleSelect1">Town</label>
-    <select class="form-control" id="slct2" name="town" required>
-          <option>Your Town</option>{{!--user town should retrieve --}}
+    <select class="form-control" id="slct2" name="town" >
+          <option</option>
     </select>
   </div><br>
 
 <div class="form-group">
     <label for="exampleSelect1">Vehicle Brand</label>
-    <select class="form-control" id="VehicleBrand" name="VehicleBrand" required>
+    <select class="form-control" id="VehicleBrand" name="VehicleBrand" >
       <option value="">Brand  </option>
       <option value="aston-martin">Aston Martin</option>
       <option value="audi">Audi</option>
@@ -154,12 +155,14 @@
 <div class="form-group">
     <label for="example-text-input" class="col-2 col-form-label" >Vehicle Model</label>
       <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search" name="vehicleModel">
-            <div class="input-group-btn">
+            <input type="text" class="form-control" placeholder="Search" name="VehicleModel">
+            {{!-- <a href="/vehicle_ads/search" class="btn btn-default" role="button"><i class="glyphicon glyphicon-search"></i></a></div> --}}
+        <div class="input-group-btn">
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-            </div>
         </div>
-  </div><br>
+        </div>
+  </div>
+  <br>
 
                     </ul><!-- end of search fielad-->
                 </div>
@@ -167,6 +170,7 @@
             </div>
             <!--/sidebar-nav-fixed -->
         </div>
+        </form>
         <!--/span-->
         <div class="col-md-6">
  
@@ -188,21 +192,14 @@
                         <small>{{ this.mileage }} km</small>
                         <small>Rs {{ this.price }}</small>
                         {{!-- <button type="button" class="btn btn-secondary">More..</button> --}}
-                        <a  target="_blank" class="btn btn-primary" href="/vehicle_ads/{{this._id}}" role="button">More..</a>
+                        <a  target="_blank" class="btn btn-primary" href="/vehicle_ads/clicked/{{this._id}}" role="button">More..</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
   </div>
-  {{/each}}
-			
-			
-		
-			 
-           
-            
-           
+  {{/each}}   
         </div>
         <!--/span-->
         <div class="col-md-3">
@@ -239,7 +236,7 @@ function populate(s1,s2){
 	var s2 = document.getElementById(s2);
 	s2.innerHTML = "";
 	if(s1.value == "Ampara"){
-		var optionArray = ["| Your Town","Akkarepattu|Akkarepattu","Ampara|Ampara","Kalmunai|Kalmunai",
+		var optionArray = ["|","Akkarepattu|Akkarepattu","Ampara|Ampara","Kalmunai|Kalmunai",
     "Sainthamaruthu|Sainthamaruthu","Dehiattakandiya|Dehiattakandiya","Padiyathalawa|Padiyathalawa",
     "Mahaoya|Mahaoya","Uhana|Uhana","Navithanveli|Navithanveli","Sammanthurai|Sammanthurai"
     ,"Kalmunai (Tamil)|Kalmunai (Tamil)","Karaitheevu|Karaitheevu","Ninthavur|Ninthavur"
@@ -247,24 +244,24 @@ function populate(s1,s2){
     ,"Pothuvil|Pothuvil","Lahugala|Lahugala"];
 	} 
   else if(s1.value == "Anuradhapura"){
-		var optionArray = ["| Your Town","Anuradhapura|Anuradhapura","Eppawala|Eppawala","Galenbindunuwewa|Galenbindunuwewa",
+		var optionArray = ["|","Anuradhapura|Anuradhapura","Eppawala|Eppawala","Galenbindunuwewa|Galenbindunuwewa",
     "Galnewa|Galnewa","Habarana|Habarana","Horowpothana|Horowpothana","Kekirawa|Kekirawa","Medawachchiya|Medawachchiya",
     "Mihintale|Mihintale","Nochchiyagama|Nochchiyagama","Talawa|Talawa","Ipalogama|Ipalogama","Kahatagasdigiliya|Kahatagasdigiliya"
     ,"Kebithigollewa|Kebithigollewa","Nachchadoowa|Nachchadoowa","Padaviya|Padaviya","Palagala|Palagala","Palugaswewa|Palugaswewa",
     "Rajanganaya|Rajanganaya","Rambewa|Rambewa","Thirappane|Thirappane","Tambuttegama|Tambuttegama"];
 	} 
   else if(s1.value == "Badulla"){
-		var optionArray = ["| Your Town","Badulla|Badulla","Bandarawela|Bandarawela","Bandarawela|Bandarawela",
+		var optionArray = ["|","Badulla|Badulla","Bandarawela|Bandarawela","Bandarawela|Bandarawela",
     "Welimada|Welimada","Mahiyanganaya|Mahiyanganaya","Hali Ela|Hali Ela","Diyatalawa|Diyatalawa","Ella|Ella",
     "Haputale|Haputale","Passara|Passara","Soranathota|Soranathota","Meegahakivula|Meegahakivula","Kandaketiya|Kandaketiya"
     ,"Lunugala|Lunugala","Rideemaliyadda|Rideemaliyadda","Haldummulla|Haldummulla"];
 	}
   else if(s1.value == "Batticaloa"){
-		var optionArray = ["| Your Town","Batticaloa|Batticaloa","Eravur Pattu|Eravur Pattu","Eravur Town|Eravur Town","Kattankudy|Kattankudy",
+		var optionArray = ["|","Batticaloa|Batticaloa","Eravur Pattu|Eravur Pattu","Eravur Town|Eravur Town","Kattankudy|Kattankudy",
     "Koralai Pattu|Koralai Pattu","Manmunai|Manmunai","Porativu Pattu|Porativu Pattu"];
 	}
   else if(s1.value == "Colombo"){
-		var optionArray = ["| Your Town","Nugegoda|Nugegoda","Dehiwala|Dehiwala","Piliyandala|Piliyandala",
+		var optionArray = ["|","Nugegoda|Nugegoda","Dehiwala|Dehiwala","Piliyandala|Piliyandala",
     "Maharagama|Maharagama","Kottawa|Kottawa","Angoda|Angoda","Athurugiriya|Athurugiriya","Avissawella|Avissawella",
     "Battaramulla|Battaramulla","Boralesgamuwa|Boralesgamuwa","Colombo 1|Colombo 1","Colombo 2|Colombo 2",
     "Colombo 3|Colombo 3","Colombo 4|Colombo 4","Colombo 5|Colombo 5","Colombo 6|Colombo 6","Colombo 7|Colombo 7",
@@ -275,111 +272,111 @@ function populate(s1,s2){
     "Pannipitiya|Pannipitiya","Rajagiriya|Rajagiriya","Ratmalana|Ratmalana","Talawatugoda|Talawatugoda","Wellampitiya|Wellampitiya"];
 	}
   else if(s1.value == "Galle"){
-		var optionArray = ["| Your Town","Galle|Galle","Ambalangoda|Ambalangoda","Elpitiya|Elpitiya",
+		var optionArray = ["|","Galle|Galle","Ambalangoda|Ambalangoda","Elpitiya|Elpitiya",
     "Hikkaduwa|Hikkaduwa","Baddegama|Baddegama","Ahangama|Ahangama","Batapola|Batapola","Bentota|Bentota",
     "Karapitiya|Karapitiya","Akmeemana|Akmeemana","Balapitiya|Balapitiya","Elpitiya|Elpitiya",
     "Gonapinuwala|Gonapinuwala","Habaraduwa|Habaraduwa","Imaduwa|Imaduwa","Karandeniya|Karandeniya","Nagoda|Nagoda",
     "Neluwa|Neluwa","Niyagama|Niyagama","Thawalama|Thawalama","Yakkalamulla|Yakkalamulla"];
 	}
   else if(s1.value == "Gampaha"){
-		var optionArray = ["| Your Town","Gampaha|Gampaha","Negombo|Negombo","Kelaniya|Kelaniya",
+		var optionArray = ["|","Gampaha|Gampaha","Negombo|Negombo","Kelaniya|Kelaniya",
     "Kiribathgoda|Kiribathgoda","Kadawatha|Kadawatha","Delgoda|Delgoda","Divulapitiya|Divulapitiya","Ganemulla|Ganemulla",
     "Ja-Ela|Ja-Ela","Kandana|Kandana","Katunayake|Katunayake","Minuwangoda|Minuwangoda","Mirigama|Mirigama"
     ,"Nittambuwa|Nittambuwa","Ragama|Ragama","Veyangoda|Veyangoda","Wattala|Wattala","Dompe|Dompe",
     "Mahara|Mahara"];
 	}
   else if(s1.value == "Hambantota"){
-		var optionArray = ["| Your Town","Hambantota|Hambantota","Tangalla|Tangalla","Beliatta|Beliatta","Ambalantota|Ambalantota",
+		var optionArray = ["|","Hambantota|Hambantota","Tangalla|Tangalla","Beliatta|Beliatta","Ambalantota|Ambalantota",
     "Tissamaharama|Tissamaharama","Ambalantota|Ambalantota","Angunakolapelessa|Angunakolapelessa","Katuwana|Katuwana",
     "Lunugamvehera|Lunugamvehera","Okewela|Okewela","Sooriyawewa|Sooriyawewa","Walasmulla|Walasmulla","Weeraketiya|Weeraketiya"];
 	}
   else if(s1.value == "Jaffna"){
-		var optionArray = ["| Your Town","Jaffna|Jaffna","Nallur|Nallur","Chavakachcheri|Chavakachcheri",
+		var optionArray = ["|","Jaffna|Jaffna","Nallur|Nallur","Chavakachcheri|Chavakachcheri",
     "Delft|Delft","Karainagar|Karainagar","Maruthnkerny|Maruthnkerny","Point Pedro|Point Pedro","Karaveddy|Karaveddy",
     "Kopay|Kopay","Tellippalai|Tellippalai","Uduvil|Uduvil","Sandilipay|Sandilipay","Chankanai|Chankanai"];
 	}
   else if(s1.value == "Kalutara"){
-		var optionArray = ["| Your Town","Kalutara|Kalutara","Horana|Horana","Panadura|Panadura",
+		var optionArray = ["|","Kalutara|Kalutara","Horana|Horana","Panadura|Panadura",
     "Bandaragama|Bandaragama","Matugama|Matugama","Alutgama|Alutgama","Beruwala|Beruwala","Ingiriya|Ingiriya",
     "Wadduwa|Wadduwa","Agalawatta|Agalawatta","Bulathsinhala|Bulathsinhala","Dodangoda|Dodangoda","Madurawela|Madurawela"
     ,"Millaniya|Millaniya","Palindanuwara|Palindanuwara","Walallavita|Walallavita"];
 	}
   else if(s1.value == "Kandy"){
-		var optionArray = ["| Your Town","Kandy|Kandy","Katugastota|Katugastota","Peradeniya|Peradeniya",
+		var optionArray = ["|","Kandy|Kandy","Katugastota|Katugastota","Peradeniya|Peradeniya",
     "Gampola|Gampola","Kundasale|Kundasale","Akurana|Akurana","Ampitiya|Ampitiya","Digana|Digana",
     "Galagedara|Galagedara","Gelioya|Gelioya","Kadugannawa|Kadugannawa","Madawala Bazaar|Madawala Bazaar","Nawalapitiya|Nawalapitiya"
     ,"Pilimatalawa|Pilimatalawa","Wattegama|Wattegama","Harispattuwa|Harispattuwa","Panvila|Panvila","Minipe|Minipe",
     "Delthota|Delthota","Hatharaliyadda|Hatharaliyadda","Thumpane|Thumpane","Minipe|Minipe"];
 	}
   else if(s1.value == "Kegalla"){
-		var optionArray = ["| Your Town","Kegalle|Kegalle","Mawanella|Mawanella","Warakapola|Warakapola",
+		var optionArray = ["|","Kegalle|Kegalle","Mawanella|Mawanella","Warakapola|Warakapola",
     "Rambukkana|Rambukkana","Ruwanwella|Ruwanwella","Dehiowita|Dehiowita","Deraniyagala|Deraniyagala","Galigamuwa|Galigamuwa",
     "Kitulgala|Kitulgala","Yatiyantota|Yatiyantota","Aranayaka|Aranayaka","Bulathkohupitiya|Bulathkohupitiya"];
 	}
   else if(s1.value == "Kilinochchi"){
-		var optionArray = ["| Your Town","Kilinochchi|Kilinochchi","Kandavalai|Kandavalai","Karachchi|Karachchi",
+		var optionArray = ["|","Kilinochchi|Kilinochchi","Kandavalai|Kandavalai","Karachchi|Karachchi",
     "Pachchilaipalli|Pachchilaipalli","Poonakary|Poonakary"];
 	}
   else if(s1.value == "Kurunegala"){
-		var optionArray = ["| Your Town","Kurunegala|Kurunegala","Kuliyapitiya|Kuliyapitiya","Pannala|Pannala",
+		var optionArray = ["|","Kurunegala|Kurunegala","Kuliyapitiya|Kuliyapitiya","Pannala|Pannala",
     "Pannala|Pannala","Narammala|Narammala","Wariyapola|Wariyapola","Alawwa|Alawwa","Bingiriya|Bingiriya",
     "Galgamuwa|Galgamuwa","Giriulla|Giriulla","Hettipola|Hettipola","Ibbagamuwa|Ibbagamuwa","Mawathagama|Mawathagama"
     ,"Nikaweratiya|Nikaweratiya","Polgahawela|Polgahawela","Ambanpola|Ambanpola","Bamunakotuwa|Bamunakotuwa","Ganewatta|Ganewatta",
     "Kobeigane|Kobeigane","Giribawa|Giribawa","Polpithigama|Polpithigama","Weerambugedara|Weerambugedara"];
 	}
   else if(s1.value == "Mannar"){
-		var optionArray = ["| Your Town","Mannar|Mannar","Madhu|Madhu","Manthai|Manthai","Musalai|Musalai",
+		var optionArray = ["|","Mannar|Mannar","Madhu|Madhu","Manthai|Manthai","Musalai|Musalai",
     "Nanaddan|Nanaddan"];
 	}
   else if(s1.value == "Matale"){
-		var optionArray = ["| Your Town","Matale|Matale","Dambulla|Dambulla","Galewela|Galewela",
+		var optionArray = ["|","Matale|Matale","Dambulla|Dambulla","Galewela|Galewela",
     "Pallepola|Pallepola","Sigiriya|Sigiriya","Yatawatta|Yatawatta","Rattota|Rattota","Naula|Naula",
     "Ukuwela|Ukuwela","Wilgamuwa|Wilgamuwa","Palapathwela|Palapathwela"];
 	}
   else if(s1.value == "Matara"){
-		var optionArray = ["| Your Town","Matara|Matara","Akuressa|Akuressa","Weligama|Weligama",
+		var optionArray = ["|","Matara|Matara","Akuressa|Akuressa","Weligama|Weligama",
     "Hakmana|Hakmana","Dikwella|Dikwella","Devinuwara|Devinuwara","Athuraliya|Athuraliya","Kamburupitiya|Kamburupitiya",
     "Kotapola|Kotapola","Malimbada|Malimbada","Pasgoda|Pasgoda","Pitabeddara|Pitabeddara","Thihagoda|Thihagoda"
     ,"Welipitiya|Welipitiya"];
 	}
   else if(s1.value == "Moneragala"){
-		var optionArray = ["| Your Town","Moneragala|Moneragala","Bibile|Bibile","Kataragama|Kataragama",
+		var optionArray = ["|","Moneragala|Moneragala","Bibile|Bibile","Kataragama|Kataragama",
     "Wellawaya|Wellawaya","Buttala|Buttala","Bibile|Bibile","Badalkumbura|Badalkumbura","Katharagama|Katharagama",
     "Madulla|Madulla","Medagama|Medagama","Sevanagala|Sevanagala","Siyambalanduwa|Siyambalanduwa","Thanamalvila|Thanamalvila"
     ,"Wellawaya|Wellawaya"];
 	}
   else if(s1.value == "Mullaitivu"){
-		var optionArray = ["| Your Town","Mullaitivu|Mullaitivu","Pandiyankulam|Pandiyankulam","Maritimepattu|Maritimepattu",
+		var optionArray = ["|","Mullaitivu|Mullaitivu","Pandiyankulam|Pandiyankulam","Maritimepattu|Maritimepattu",
     "Oddusuddan|Oddusuddan","Puthukudiyiruppu|Puthukudiyiruppu","Thunukkai|Thunukkai","Welioya|Welioya"];
 	}
   else if(s1.value == "Nuwara Eliya"){
-		var optionArray = ["| Your Town","Nuwara Eliya|Nuwara Eliya","Hatton|Hatton","Ginigathena|Ginigathena",
+		var optionArray = ["|","Nuwara Eliya|Nuwara Eliya","Hatton|Hatton","Ginigathena|Ginigathena",
     "Madulla|Madulla","Walapane|Walapane","Hanguranketha|Hanguranketha","Ambagamuwa|Ambagamuwa"];
 	}
   else if(s1.value == "Polonnaruwa"){
-		var optionArray = ["| Your Town","Polonnaruwa|Polonnaruwa","Kaduruwela|Kaduruwela","Hingurakgoda|Hingurakgoda",
+		var optionArray = ["|","Polonnaruwa|Polonnaruwa","Kaduruwela|Kaduruwela","Hingurakgoda|Hingurakgoda",
     "Medirigiriya|Medirigiriya","Dimbulagala|Dimbulagala","Elahera|Elahera","Lankapura|Lankapura","Thamankaduwa|Thamankaduwa",
     "Welikanda|Welikanda"];
 	}
   else if(s1.value == "Puttalam"){
-		var optionArray = ["| Your Town","Puttalam|Puttalam","Pallama|Pallama","Chilaw|Chilaw","Wennappuwa|Wennappuwa",
+		var optionArray = ["|","Puttalam|Puttalam","Pallama|Pallama","Chilaw|Chilaw","Wennappuwa|Wennappuwa",
     "Dankotuwa|Dankotuwa","Nattandiya|Nattandiya","Marawila|Marawila","Anamaduwa|Anamaduwa","Arachchikattuwa|Arachchikattuwa",
     "Kalpitiya|Kalpitiya","Madampe|Madampe","Mahakumbukkadawala|Mahakumbukkadawala","Mahawewa|Mahawewa","Mundalama|Mundalama"
     ,"Nawagattegama|Nawagattegama","Pallama|Pallama","Vanathavilluwa|Vanathavilluwa"];
 	}
   else if(s1.value == "Ratnapura"){
-		var optionArray = ["| Your Town","Ratnapura|Ratnapura","Embilipitiya|Embilipitiya","Balangoda|Balangoda",
+		var optionArray = ["|","Ratnapura|Ratnapura","Embilipitiya|Embilipitiya","Balangoda|Balangoda",
     "Pelmadulla|Pelmadulla","Eheliyagoda|Eheliyagoda","Kuruwita|Kuruwita","Ayagama|Ayagama","Elapattha|Elapattha",
     "Godakawela|Godakawela","Imbulpe|Imbulpe","Kahawatta|Kahawatta","Kalawana|Kalawana","Kiriella|Kiriella"
     ,"Kolonna|Kolonna","Nivithigala|Nivithigala","Opanayaka|Opanayaka","Weligepola|Weligepola"];
 	}
   else if(s1.value == "Trincomalee"){
-		var optionArray = ["| Your Town","Trincomalee|Trincomalee","Gomarankadawala|Gomarankadawala","Kantalai|Kantalai",
+		var optionArray = ["|","Trincomalee|Trincomalee","Gomarankadawala|Gomarankadawala","Kantalai|Kantalai",
     "Kinniya|Kinniya","Kuchchaveli|Kuchchaveli","Morawewa|Morawewa","Muttur|Muttur","Padavi Sri Pura|Padavi Sri Pura",
     "Seruvila|Seruvila","Thambalagamuwa|Thambalagamuwa","Verugal (Echchilampattai)|Verugal (Echchilampattai)"];
 	}
   else if(s1.value == "Vavuniya"){
-		var optionArray = ["| Your Town","Vavuniya|Vavuniya","Vengalacheddikulam|Vengalacheddikulam"];
+		var optionArray = ["|","Vavuniya|Vavuniya","Vengalacheddikulam|Vengalacheddikulam"];
 	}
 
   
