admin deleting ads

--- a/views/pending_vehicle_ads.hbs
+++ b/views/pending_vehicle_ads.hbs
@@ -34,7 +34,7 @@
             <div class="row">
   <div class="col-lg-3">
             <a class="btn btn-primary" href="/admin/confirm_vehicle_ad/{{this._id}}" role="button">Confirm This Ad To Publish</a><br>
-            <a class="btn btn-danger" href="#" role="button">Delete This Ad</a>
+            <a class="btn btn-danger" href="/admin/delete_vehicle_ad/{{this._id}}" role="button">Delete This Ad</a>
             </div>
             <div class="col-lg-6">
                 <form name="form" method="POST" action="/admin/sendSMS">
