Auto stash before merge of "master" and "origin/master"
routs gefining

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -71,7 +71,7 @@
 
       <div class="container" >
         <div class="row_1">
-          <a href="tutorials.jsp">
+          <a href="#">
           <div class="section_1">
             <div class="image-bg"></div>
             <div class="text">Spare Parts</div>
@@ -83,7 +83,7 @@
             <div class="text" style="z-index: 9999;">Vehicle Ads</div>
           </div>
           </a>
-          <a href="newTrends.jsp">
+          <a href="#">
           <div class="section_3">
             <div class="image-bg"></div>
             <div class="text">Garages</div>
@@ -95,19 +95,19 @@
           </div>
         </div>
         <div class="row_3">
-          <a href="newsFeed/test1.html">
+          <a href="#">
           <div class="section_7">
             <div class="image-bg"></div>
             <div class="text">Vehicle rent</div>
           </div>
           </a>
-          <a href="venue_jsp.jsp">
+          <a href="#">
           <div class="section_8">
             <div class="image-bg"></div>
             <div class="text">About Us</div>
           </div>
           </a>
-          <a href="aboutUs.jsp">
+          <a href="#">
           <div class="section_9">
             <div class="image-bg"></div>
             <div class="text">Helps & Tips</div>
