--- a/views/admin_home.hbs
+++ b/views/admin_home.hbs
@@ -1,27 +1,155 @@
-<link rel="stylesheet" href="/stylesheets/style.css">
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <title>{{title}}</title>
-</head>
-<body>
-<h1>{{title}}</h1>
 
-<h2>Pending Ads</h2>
-<a class="btn btn-primary" href="/admin/pending_vehicle_ads" role="button">All Pending Ads of Vehicle Category</a>
-<a class="btn btn-primary" href="/#" role="button">All Pending Ads of Spareparts Category</a>
-<a class="btn btn-primary" href="/#" role="button">All Pending Ads of Vehicle Rent Category</a>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/admin_allAds.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+<!------ Include the above in your HEAD tag ---------->
 
-<h2>All Ads</h2>
-<a class="btn btn-primary" href="/#" role="button">All Ads of Vehicle Rent Category</a>
-<a class="btn btn-primary" href="/#" role="button">All Ads of Vehicle Rent Category</a>
-<a class="btn btn-primary" href="/#" role="button">All Ads of Vehicle Rent Category</a>
+<nav class="navbar navbar-default navbar-static-top" style="background-color:#0B0B61">
+    <div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle navbar-toggle-sidebar collapsed">
+			MENU
+			</button>
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">
+				<a class="navbar-brand" href="#"   style="font-family: 'Berkshire Swash', sans-serif">VehiclePartner.lk</a>
+			</a>
+		</div>
 
-<h2>Users</h2>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">      
+			
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="http://www.pingpong-labs.com" target="_blank">LogOut</a></li>
+				
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>  	<div class="container-fluid main-container">
 
-<h2>user table shod be displayed</h2>
+
+
+
+  		<div class="col-md-2 sidebar">
+  			<div class="row">
+	<!-- uncomment code for absolute positioning tweek see top comment in css -->
+	<div class="absolute-wrapper"> </div>
+	<!-- Menu -->
+	<div class="side-menu">
+		<nav class="navbar navbar-default" role="navigation">
+			<!-- Main Menu -->
+			<div class="side-menu-container">
+				<ul class="nav navbar-nav">
+					<li class="active"><a ><span class="glyphicon glyphicon-user"></span> Admin</a></li>
+					
+
+
+<!-- Dropdown-->
+					<li class="panel panel-default" id="dropdown">
+						<a data-toggle="collapse" href="#dropdown-lvl1">
+							<span class="glyphicon glyphicon-envelope"></span> All Pending Ads <span class="caret"></span>
+						</a>
+
+						<!-- Dropdown level 1 -->
+						<div id="dropdown-lvl1" class="panel-collapse collapse">
+							<div class="panel-body">
+								<ul class="nav navbar-nav">
+									<li><a href="/admin/pending_vehicle_ads">All Pending Ads of Vehicle Category</a></li>
+									<li><a href="#">All Pending Ads of Spareparts Category</a></li>
+									<li><a href="#">All Pending Ads of Vehicle Rent Category</a></li>
+
+
+								
+									
+								</ul>
+							</div>
+						</div>
+					</li>
+
+
+
+					<!-- Dropdown-->
+					<li class="panel panel-default" id="dropdown">
+						<a data-toggle="collapse" href="#dropdown-lvl1">
+							<span class="glyphicon glyphicon-list-alt"></span> All Ads <span class="caret"></span>
+						</a>
+
+						<!-- Dropdown level 1 -->
+						<div id="dropdown-lvl1" class="panel-collapse collapse">
+							<div class="panel-body">
+								<ul class="nav navbar-nav">
+									<li><a href="#">All Ads of Vehicle Category</a></li>
+									<li><a href="#">All Ads of Spareparts Category</a></li>
+									<li><a href="#">All Ads of Vehicle Rent Category</a></li>
+
+
+								
+									
+								</ul>
+							</div>
+						</div>
+					</li>
+
+					<li><a href="#"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</nav>
+
+	</div>
+</div>  		</div>
+  		<div class="col-md-10 content">
+  			  <div class="panel panel-default">
+	<div class="panel-heading">
+		Dashboard
+	</div>
+	<div class="panel-body">
+		
+
+
+
+
+
+
+    
+</div>
+  		</div>
+  		<footer class="pull-left footer">
+  			<p class="col-md-12">
+  				<hr class="divider">
+  				Copyright &COPY; 2018 <a>VehiclePartner.lk</a>
+  			</p>
+  		</footer>
+  	</div>
+
+<script>
+
+    $(function () {
+  	$('.navbar-toggle-sidebar').click(function () {
+  		$('.navbar-nav').toggleClass('slide-in');
+  		$('.side-body').toggleClass('body-slide-in');
+  		$('#search').removeClass('in').addClass('collapse').slideUp(200);
+  	});
+
+  	$('#search-trigger').click(function () {
+  		$('.navbar-nav').removeClass('slide-in');
+  		$('.side-body').removeClass('body-slide-in');
+  		$('.search-input').focus();
+  	});
+  });
+
+</script>
+
+
+
