--- a/views/pending_vehicle_ads.hbs
+++ b/views/pending_vehicle_ads.hbs
@@ -102,7 +102,7 @@
 						</div>
 					</li>
 
-					<li><a href="#"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+					<li><a href="/admin/"><span class="glyphicon glyphicon-user"></span> Users</a></li>
 
 				</ul>
 			</div><!-- /.navbar-collapse -->
