add helps and tips page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -107,7 +107,7 @@
             <div class="text">About Us</div>
           </div>
           </a>
-          <a href="#">
+          <a href="/users/helpAndTips">
           <div class="section_9">
             <div class="image-bg"></div>
             <div class="text">Helps & Tips</div>
