add about us path

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -101,7 +101,7 @@
             <div class="text">Vehicle rent</div>
           </div>
           </a>
-          <a href="#">
+          <a href="/users/aboutUs">
           <div class="section_8">
             <div class="image-bg"></div>
             <div class="text">About Us</div>
