add select vehicle add view page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -62,7 +62,7 @@
               <p >Welcome to the Vehicle Partner.. </p>
             </section>
             <a href="/users/login" style="text-decoration: none">
-            <div class="signUp" id="signUp" >Post a ad </div>
+            <div class="signUp" id="signUp" >Post ad </div>
             </a>
           </div>
         </div>
