--- a/views/garage-register.hbs
+++ b/views/garage-register.hbs
@@ -17,10 +17,8 @@
    width: 680px;
 }
 </style>
-<script src="https://maps.googleapis.com/maps/api/js?AIzaSyAwLerGxOlAUFyTecHDck4g2qwtG2HI7i4&sensor=false">
-</script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
-</script>
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyB1hVEO6yyjaayhluLjqBG9tyA1jv1iPf8"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
  <title>{{title}}</title>
 </head>
 <body>
@@ -147,6 +145,14 @@
                 </label>
                 <input type="text" class="form-control" onfocus="this.blur()" class="readonly" required>
             </div>
+
+            <div class="form-group">
+    <label for="example-text-input" class="col-2 col-form-label" >Contact No</label>
+      <div class="col-10">
+        <input class="form-control" maxlength="10" minlength="10" type="number" 
+        onchange="phoneNumber()"  id="contactno" name="contactno" placeholder="Enter Contact No" required>
+      </div>
+  </div>
       </div>
    <button type="reset" class="btn btn-primary">Reset</button>
   <button type="submit" class="btn btn-primary">Submit</button>
@@ -492,4 +498,18 @@ for (i = 0; i < extensions.length; i++)
 alert("You must upload an image file with one of the following extensions: "+ extensions.join(', ') +".");
 return false;
 }
+</script>
+
+{{!-- phone number validation --}}
+<script>
+  function phoneNumber(){
+    
+    var inputtxt = document.getElementById("contactNo").value;
+    var phoneno = /^\d{10}$/;
+    if (!inputtxt.match(phoneno)) {
+          alert("The Contacct no must have 10 digits");
+          return false;
+     }
+    return true;
+  }
 </script>
