--- a/views/admin_allads.hbs
+++ b/views/admin_allads.hbs
@@ -144,7 +144,7 @@
             <small>Fuel Type: {{ this.fuelType }}</small>
 
                         {{!-- <button type="button" class="btn btn-secondary">More..</button> --}}
-                        <a  target="_blank" class="btn btn-danger" href="/admin/deleteVehicleAd/{{this._id}}"  role="button">Delete</a>
+                        <a class="btn btn-danger" href="/admin/deleteVehicleAd/{{this._id}}"  role="button">Delete</a>
                     </div>
                 </div>
             </div>
