--- a/views/selectAdType.hbs
+++ b/views/selectAdType.hbs
@@ -1,4 +1,4 @@
-	<title>{{title}}</title>
+<title>Select Ad Type</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -53,7 +53,7 @@
 						Login to continue..
 					</span>
 				</div>
-
+                Not Registered? 
 				<form class="login100-form validate-form"  name="form" method="POST" action="/users_login/login">
 					
 
