modified garage prof view

--- a/views/garage-all.hbs
+++ b/views/garage-all.hbs
@@ -22,8 +22,8 @@
         <div class="navbar-collapse">
            
 			<ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user" style="color: #FFFFFF"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in" style="color: #FFFFFF"></span> Login</a></li>
+        
+        <li><a href="/garage/register"><span class="glyphicon glyphicon-log-in" style="color: #FFFFFF"></span> Register Your Garage</a></li>
       </ul>
         
         </div>
