--- a/views/index.hbs
+++ b/views/index.hbs
@@ -83,7 +83,7 @@
             <div class="text" style="z-index: 9999;">Vehicle Ads</div>
           </div>
           </a>
-          <a href="#">
+          <a href="/garage">
           <div class="section_3">
             <div class="image-bg"></div>
             <div class="text">Garages</div>
