--- a/views/index.hbs
+++ b/views/index.hbs
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="row_3">
-          <a href="#">
+          <a href="/rent_ads">
           <div class="section_7">
             <div class="image-bg"></div>
             <div class="text">Vehicle rent</div>
