--- a/views/aboutUs.hbs
+++ b/views/aboutUs.hbs
@@ -23,9 +23,7 @@
         <div class="navbar-collapse">
            
 			<ul class="nav navbar-nav navbar-right">
-      
-        <li><a href="#"><span class="glyphicon glyphicon-log-in" style="color: #FFFFFF"></span> LogOut</a></li>
-      </ul>
+       </ul>
         
         </div>
         <!--/.navbar-collapse -->
@@ -94,63 +92,68 @@
               <li>
                <div class="timeline-image">
                   <h4>Vehicle
-                    <br>Ads
+                    <br>Repair
+                    <br>Help
                     </h4>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
           
-                    <h4 class="subheading">Vehicle Ads</h4>
+                    
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Members can easily sell their vehicles using our service</p>
+                    <p class="text-muted">Vehicle Partner provides, most reliable vehicle related services in Sri Lanka. We will make you connect with the nearby garages if your vehicle broke down in the middle of the road. The mechanics from the garage you contact 
+                      will come to you for help. You simply need to download our App “Vehicle Partner” to get the service.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Vehicle
-                    <br>Rents
+                    <br>Renting
                     </h4>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
           
-                    <h4 class="subheading">Vehicle Rent</h4>
+                    
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">members can easily rent their vehicles using our service</p>
+                    <p class="text-muted">Want to rent out your Vehicles and earn money? But not sure how to connect with your customers? No worries. We got you covered. You can simply post your Rent out Advertisements with your contact details here.
+                       And you can earn your money without spending a penny on Advertisements.</p>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="timeline-image">
-                  <h4>Spare
-                    <br>Parts
+                  <h4>Buy
+                    <br>And<br>Sell
                     </h4>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
   
-                    <h4 class="subheading">Spare Parts</h4>
+                    
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">members can easily sell vehicles spare parts</p>
+                    <p class="text-muted">Vehicle Partner provides online automobile magazine in Sri-Lanka. The best platform for buying and selling vehicle and vehicle spare parts. You can simply post
+                       your Selling Advertisements with your contact details. And boom, You get this service totally free.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4>Garages
+                  <h4><br>Garages
               
                      </h4>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4 class="subheading">Garages</h4>
+                    
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">members can easily find garages</p>
+                    <p class="text-muted"> We are in a culture of restlessness and commitment, which is why we are always on the lookout for garages to join, that can be rewarding experience with lots of loyal customers of yours. 
+                      If you feel that you have the right services and products, it is time you to join Vehicle Partner! </p>
                   </div>
                 </div>
               </li>
