--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -12,7 +12,7 @@
 <body style="background-color:#F2F3F5">
 <div class="navbar navbar-fixed-top navbar-default " style="background-color:#0B0B61">
   	<div class="container">
-      <div class="navbar-header"><a class="navbar-brand" href="#">VehiclePartner.lk</a><a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <div class="navbar-header"><a class="navbar-brand" href="/">VehiclePartner.lk</a><a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="glyphicon glyphicon-bar"></span>
           <span class="glyphicon glyphicon-bar"></span>
           <span class="glyphicon glyphicon-bar"></span>
@@ -22,7 +22,7 @@
            
 			<ul class="nav navbar-nav navbar-right">
         
-        <li><a href="#"><span class="glyphicon glyphicon-log-in" style="color: #FFFFFF"></span> LogOut</a></li>
+        <li><a href="/"><span class="glyphicon glyphicon-log-out" style="color: #FFFFFF"></span> LogOut</a></li>
       </ul>
         
         </div>
@@ -35,12 +35,12 @@
             <div class="sidebar-nav-fixed affix" >
                 <div class="well" style="background-color:#EAEBEF;">
                     <ul class="nav ">
-                        <h1> Sell Something:</h1>
+                        <h2 style="text-align:center"> Select what to sell</h2>
 						
                         
                         <button type="button" class="btn btn-info btn-lg btn-block"><a  href="/users/vehicle_ad_form">Sell a Vehicle</a></button>
-<button type="button" class="btn btn-info btn-lg btn-block">Sell a Spare Part</button>
-<button type="button" class="btn btn-primary btn-lg btn-block">Rent a Vehicle</button>
+<button type="button" class="btn btn-info btn-lg btn-block"><a  href="/users/spare_part_ad_form">Sell a Spare Part</a></button>
+<button type="button" class="btn btn-primary btn-lg btn-block"><a  href="/users/rent_ad_form">Rent a Vehicle</a></button>
                     </ul>
                 </div>
                 <!--/.well -->
