--- a/views/garage-all.hbs
+++ b/views/garage-all.hbs
@@ -13,7 +13,7 @@
 <body style="background-color:#F2F3F5">
 <div class="navbar navbar-fixed-top navbar-default " style="background-color:#0B0B61">
   	<div class="container">
-      <div class="navbar-header"><a class="navbar-brand" href="#">VehiclePartner.lk</a><a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <div class="navbar-header"><a class="navbar-brand" href="/">VehiclePartner.lk</a><a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="glyphicon glyphicon-bar"></span>
           <span class="glyphicon glyphicon-bar"></span>
           <span class="glyphicon glyphicon-bar"></span>
@@ -94,7 +94,7 @@
             {{!-- <input type="text" class="form-control" placeholder="Search" name="VehicleModel"> --}}
             {{!-- <a href="/vehicle_ads/search" class="btn btn-default" role="button"><i class="glyphicon glyphicon-search"></i></a></div> --}}
         <div class="input-group-btn">
-               <center><button class="btn btn-default" type="submit">Search Garage</i></button></center> 
+               <center><button class="btn btn-primary" type="submit">Search Garage</i></button></center> 
         </div>
         </div>
   </div>
