--- a/views/garage-register.hbs
+++ b/views/garage-register.hbs
@@ -58,7 +58,7 @@
 
 <div class="navbar navbar-fixed-top navbar-default " style="background-color:#0B0B61">
   	<div class="container">
-      <div class="navbar-header"><a class="navbar-brand" href="#">VehiclePartner.lk</a><a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <div class="navbar-header"><a class="navbar-brand" href="/">VehiclePartner.lk</a><a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="glyphicon glyphicon-bar"></span>
           <span class="glyphicon glyphicon-bar"></span>
           <span class="glyphicon glyphicon-bar"></span>
@@ -67,8 +67,7 @@
         <div class="navbar-collapse">
            
 			<ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user" style="color: #FFFFFF"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in" style="color: #FFFFFF"></span> Login</a></li>
+        
       </ul>
         
         </div>
@@ -81,7 +80,7 @@
 <div class="row">
     
     <div class="col-sm-2"></div>
-    <div class="col-sm-8" style="background-color:rgb(204, 200, 200);padding: 10px;"><br><br>
+    <div class="col-sm-8" style="background-color:rgb(204, 200, 200);padding: 5px;"><br><br>
         <center><h1>{{title}}</h1></center><br>
         <div class="col-sm-2"></div>
         <div class="col-sm-8" style="background-color:rgb(204, 200, 200);">
