--- a/views/pending_vehicle_ads.hbs
+++ b/views/pending_vehicle_ads.hbs
@@ -1,4 +1,4 @@
-
+<title>Vehicle Partner</title>
 
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -24,7 +24,7 @@
 				<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="#">
-				<a class="navbar-brand" href="#"   style="font-family: 'Berkshire Swash', sans-serif">VehiclePartner.lk</a>
+				<a class="navbar-brand" href="/"   style="font-family: 'Berkshire Swash', sans-serif">VehiclePartner.lk</a>
 			</a>
 		</div>
 
@@ -32,12 +32,12 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">      
 			
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="http://www.pingpong-labs.com" target="_blank">LogOut</a></li>
+				<li><a href="/" >LogOut</a></li>
 				
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
-	</nav>  	<div class="container-fluid main-container">
+	</nav>  	<div class="container-fluid main-container" style="background-color:#F2F3F5">
 
 
 
@@ -66,9 +66,9 @@
 						<div id="dropdown-lvl1" class="panel-collapse collapse">
 							<div class="panel-body">
 								<ul class="nav navbar-nav">
-									<li><a href="#">All Pending Ads of Vehicle Category</a></li>
+									<li><a href="/admin/pending_vehicle_ads">All Pending Ads of Vehicle Category</a></li>
 									<li><a href="#">All Pending Ads of Spareparts Category</a></li>
-									<li><a href="#">All Pending Ads of Vehicle Rent Category</a></li>
+									<li><a href="/admin/pending_rent_ads">All Pending Ads of Vehicle Rent Category</a></li>
 
 
 								
@@ -90,7 +90,7 @@
 						<div id="dropdown-lvl2" class="panel-collapse collapse">
 							<div class="panel-body">
 								<ul class="nav navbar-nav">
-									<li><a href="#">All Ads of Vehicle Category</a></li>
+									<li><a href="/admin/all_Ads">All Ads of Vehicle Category</a></li>
 									<li><a href="#">All Ads of Spareparts Category</a></li>
 									<li><a href="#">All Ads of Vehicle Rent Category</a></li>
 
@@ -103,6 +103,26 @@
 					</li>
 
 					<li><a href="/admin/"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+                <li class="panel panel-default" id="dropdown">
+						<a data-toggle="collapse" href="#dropdown-lvl3">
+							<span class="glyphicon glyphicon-wrench"></span> Garage <span class="caret"></span>
+						</a>
+
+						<!-- Dropdown level 1 -->
+						<div id="dropdown-lvl3" class="panel-collapse collapse">
+							<div class="panel-body">
+								<ul class="nav navbar-nav">
+									<li><a href="/admin/pending_garages">Pending Garages</a></li>
+									<li><a href="#">All Garages</a></li>
+				
+
+
+								
+									
+								</ul>
+							</div>
+						</div>
+					</li>
 
 				</ul>
 			</div><!-- /.navbar-collapse -->
@@ -187,6 +207,7 @@
                     <div class="col-sm-6 col-md-4">
                         <img src="/uploads/{{this.image1Path}}" alt="" class="img-rounded img-responsive" />
                     </div>
+					
                     <div class="col-sm-6 col-md-8">
                         <h4> {{ this.VehicleBrand }} {{ this.VehicleModel }} {{ this.year }}</h4>
                         <small><cite title="San Francisco, USA">Location: {{ this.district }}, {{ this.town}} <i class="glyphicon glyphicon-map-marker">
@@ -255,12 +276,7 @@
 
 </div>
   		</div>
-  		<footer class="pull-left footer">
-  			<p class="col-md-12">
-  				<hr class="divider">
-  				Copyright &COPY; 2018 <a>VehiclePartner.lk</a>
-  			</p>
-  		</footer>
+  		
   	</div>
 
 <script>
