--- a/views/vehicle-ads-all.hbs
+++ b/views/vehicle-ads-all.hbs
@@ -13,7 +13,7 @@
 <body style="background-color:#F2F3F5">
 <div class="navbar navbar-fixed-top navbar-default " style="background-color:#0B0B61">
   	<div class="container">
-      <div class="navbar-header"><a class="navbar-brand" href="#">VehiclePartner.lk</a><a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <div class="navbar-header"><a class="navbar-brand" href="/">VehiclePartner.lk</a><a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="glyphicon glyphicon-bar"></span>
           <span class="glyphicon glyphicon-bar"></span>
           <span class="glyphicon glyphicon-bar"></span>
@@ -22,9 +22,7 @@
         <div class="navbar-collapse">
            
 			<ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user" style="color: #FFFFFF"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in" style="color: #FFFFFF"></span> Login</a></li>
-      </ul>
+        </ul>
         
         </div>
         <!--/.navbar-collapse -->
