--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -64,9 +64,7 @@
             <div class="sidebar-nav-fixed pull-right affix">
                 <div class="well" style="background-color:#EAEBEF;">
                     <ul class="nav ">
-                        <li class="nav-header">Advetisement</li>
-                       
-                        </li>
+                        <img src="/images/1.jpg" alt="" class="img-responsive" />
                     </ul>
                 </div>
                 <!--/.well -->
