--- a/views/pending-rent-ads.hbs
+++ b/views/pending-rent-ads.hbs
@@ -92,7 +92,7 @@
 								<ul class="nav navbar-nav">
 									<li><a href="/admin/all_Ads">All Ads of Vehicle Category</a></li>
 									<li><a href="#">All Ads of Spareparts Category</a></li>
-									<li><a href="#">All Ads of Vehicle Rent Category</a></li>
+									<li><a href="/admin/adminPubRentAds">All Ads of Vehicle Rent Category</a></li>
 
 
 								
